--- a/css/media.css
+++ b/css/media.css
@@ -67,10 +67,102 @@
     }
 }
 
+@media (max-width:450px)
+{
+    nav > img{
+        display: none;
+    }
 
+    nav > a{
+        font-size: 8px;
+    }
+    #par_1{
+        width: 90%;
+        font-size:25px;
+    }
+    #image_p1 >img{
+        margin-top: 3vw;
+        height:200px ;
+        width: 200px;;
+}
+#menu > img {
+    height:55px; 
+    width: 55px;
 
+}
+footer {
+    width: 100%;
 
+}
+#menu
+{
+    margin-left: 10px;
+}
+header
+{
+    width: 100%;
+    height: 150px;
+}
+#menu
+{
+    height: 130px;
+    margin-left: 15px;
+}
+.align_elem
+{
+    font-size: 9px;
+    padding:0px;
+    width:300px;
+    height: 80px;
+}
+}
 
+@media (max-width:450px)
+{
+    nav > img{
+        display: none;
+    }
 
+    nav > a{
+        font-size: 8px;
+    }
+    #par_1{
+        width: 90%;
+        font-size:25px;
+    }
+    #image_p1 >img{
+        margin-top: 3vw;
+        height:200px ;
+        width: 200px;;
+}
+#menu > img {
+    height:55px; 
+    width: 55px;
 
+}
+footer {
+    width: 100%;
 
+}
+#menu
+{
+    margin-left: 10px;
+}
+header
+{
+    width: 100%;
+    height: 150px;
+}
+#menu
+{
+    height: 130px;
+    margin-left: 15px;
+}
+.align_elem
+{
+    font-size: 9px;
+    padding:0px;
+    width:300px;
+    height: 80px;
+}
+}
