--- a/css/media.css
+++ b/css/media.css
@@ -1,58 +1,57 @@
-@media (max-width:915px)
-{
+@media (max-width:915px) {
 
-    nav > img{
+    nav>img {
         display: none;
     }
 
-    nav > a{
+    nav>a {
         font-size: 12px;
     }
 
 
-    #main_haut{
+    #main_haut {
         align-items: center;
     }
 
-    .elem_droit{
+    .elem_droit {
         padding-right: 0;
     }
 
-    #main1{
+    #main1 {
         display: flex;
         flex-direction: column;
         justify-content: space-around;
     }
 
-    #par_1{
+    #par_1 {
         width: 90%;
     }
 
- 
-    #main_haut_p2{
+
+    #main_haut_p2 {
         display: flex;
         flex-direction: column;
         justify-content: space-around;
         align-items: center;
     }
 
-    .card{
+    .card {
         width: 60vw;
         height: 20vw;
         border-radius: 10px;
     }
 
-    #main_haut{
+    #main_haut {
         display: flex;
         flex-direction: column;
     }
 
 
-    #input > input{
+    #input>input {
         padding: 0.8vw;
     }
-    
-    #input > label{
+
+    #input>label {
         font-size: 2vw;
     }
 
@@ -60,109 +59,118 @@
         font-size: 12px;
     }
 
-    footer > p{
+    footer>p {
         color: white;
-        text-align:right;
-        padding-right:4vw;
+        text-align: right;
+        padding-right: 4vw;
     }
 }
 
-@media (max-width:450px)
-{
-    nav > img{
+@media (max-width:450px) {
+    nav>img {
         display: none;
     }
 
-    nav > a{
+    nav>a {
         font-size: 8px;
     }
-    #par_1{
+
+    #par_1 {
         width: 90%;
-        font-size:25px;
+        font-size: 25px;
     }
-    #image_p1 >img{
+
+    #image_p1>img {
         margin-top: 3vw;
-        height:200px ;
-        width: 200px;;
-}
-#menu > img {
-    height:55px; 
-    width: 55px;
+        height: 200px;
+        width: 200px;
+        ;
+    }
 
-}
-footer {
-    width: 100%;
+    #menu>img {
+        height: 55px;
+        width: 55px;
 
-}
-#menu
-{
-    margin-left: 10px;
-}
-header
-{
-    width: 100%;
-    height: 150px;
-}
-#menu
-{
-    height: 130px;
-    margin-left: 15px;
-}
-.align_elem
-{
-    font-size: 9px;
-    padding:0px;
-    width:300px;
-    height: 80px;
-}
+    }
+
+    footer {
+        width: 100%;
+
+    }
+
+    #menu {
+        margin-left: 10px;
+    }
+
+    header {
+        width: 100%;
+        height: 150px;
+    }
+
+    #menu {
+        height: 130px;
+        margin-left: 15px;
+    }
+
+    .align_elem {
+        font-size: 9px;
+        padding: 0px;
+        width: 300px;
+        height: 80px;
+    }
 }
 
-@media (max-width:450px)
-{
-    nav > img{
+
+@media (max-width:450px) {
+    nav>img {
         display: none;
     }
 
-    nav > a{
+    nav>a {
         font-size: 8px;
     }
-    #par_1{
+
+    #par_1 {
         width: 90%;
-        font-size:25px;
+        font-size: 25px;
     }
-    #image_p1 >img{
+
+    #image_p1>img {
         margin-top: 3vw;
-        height:200px ;
-        width: 200px;;
-}
-#menu > img {
-    height:55px; 
-    width: 55px;
+        height: 30vw;
+        width: 30vw;
+        padding-left: 12vw;
+    }
 
-}
-footer {
-    width: 100%;
+    #menu>img {
+        height: 10vw;
+        width: 10vw;
 
-}
-#menu
-{
-    margin-left: 10px;
-}
-header
-{
-    width: 100%;
-    height: 150px;
-}
-#menu
-{
-    height: 130px;
-    margin-left: 15px;
-}
-.align_elem
-{
-    font-size: 9px;
-    padding:0px;
-    width:300px;
-    height: 80px;
-}
+    }
+
+    footer {
+        width: 100%;
+
+    }
+
+    #menu {
+        margin-left: 10px;
+    }
+
+    header {
+        width: 100%;
+        height: 150px;
+    }
+
+    #menu {
+        height: 130px;
+        margin-left: 15px;
+    }
+
+    .align_elem {
+        font-size: 9px;
+        padding: 0px;
+        width: 300px;
+        height: 80px;
+    }
 }
