--- a/css/media.css
+++ b/css/media.css
@@ -27,6 +27,13 @@
         width: 90%;
     }
 
+    
+    #image_p1>img {
+        margin-top: 3vw;
+        height: 25vw;
+        width: 25vw;
+        padding-left: 12vw;
+    }
 
     #main_haut_p2 {
         display: flex;
